# IntelliRAG-Full-Stack-Application

./: .gitignore  README.md
backend/: pyproject.toml
backend/src/: app.py  qdrant-temp.py  qdrant.py  rag.py
frontend/: package-lock.json  package.json
frontend/src/: App.js  QuestionForm.css  QuestionForm.js
