[project]
name = "backend"
version = "0.1.0"
description = ""
authors = [
    {name = "charuka-g",email = "charukagunawardhaneixvii@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "fastapi (>=0.115.6,<0.116.0)",
    "uvicorn (>=0.34.0,<0.35.0)",
    "qdrant-client (>=1.13.2,<2.0.0)",
    "openai (>=1.60.1,<2.0.0)",
    "decouple (>=0.0.7,<0.0.8)",
    "langchain-huggingface (>=0.1.2,<0.2.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.dependencies]
python = ">=3.9,<4.0"
langchain-community = "^0.3.15"